# tetrika

./: pyproject.toml  requirements.dev.txt
.github/workflows/: lint.yml  test.yml
task1/: solution.py
task2/: solution.py
task3/: solution.py
tests/task1/: test_solution_1.py
tests/task2/: test_solution_2.py
tests/task3/: test_solution_3.py
