[project]
name = "Test task"
version = "0.1.0"
description = "Test task"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
lines_between_types=1
src_paths="src,tests"
skip="venv,.venv,dist,build"

[tool.flake8]
ignore = "E203,W503,D100,D104,D107,D400,D401,D1,D419,D212,E226,E251"
max_line_length = 120
exclude = ".git,__pycache__,.pytest_cache,lib,docs,*egg,.tox,dist,_patch,venv,.venv"
per-file-ignores = "__init__.py:F401"
docstring-convention="google"
max-cognitive-complexity=6
